# GCW-Discount-Presets

apps/gcw-discount-app/: .env.example  .gitignore  .railwayignore  ARCHITECTURE.md  CUSTOM_APP_SETUP.md  DEPLOYMENT.md  QUICKSTART.md  README.md  RUNBOOK_PROD_DEPLOY.md  SETUP.md  nixpacks.toml  package-lock.json  package.json  railway.json  server.js  shopify.app.gcw-discount-functions.toml  shopify.app.gcw-discount-presets.toml  shopify.app.toml  shopify.app.toml.backup
apps/gcw-discount-app/extensions/admin-ui/: .env.example  API.md  BACKEND_IMPLEMENTATION.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  index.html  package-lock.json  package.json  shopify.d.ts  shopify.ui.extension.toml.disabled  tsconfig.json  vite.config.ts
apps/gcw-discount-app/extensions/checkout-message/: README.md  package.json  (+1 more)
apps/gcw-discount-app/extensions/gcw-shipping-function/: Cargo.toml  input.graphql  shopify.extension.toml  test-input.json
apps/gcw-discount-app/extensions/gcw-shipping-function/src/: lib.rs
apps/gcw-discount-app/functions/discount-function/: Cargo.toml  input.graphql  schema.graphql  shopify.extension.toml  shopify.function.toml
apps/gcw-discount-app/functions/discount-function/src/: cart_delivery_options_discounts_generate_run.graphql  cart_lines_discounts_generate_run.graphql  lib.rs
apps/gcw-discount-app/scripts/: deploy-prod-from-other-desktop.cmd
apps/gcw-discount-app/web/: config.js  discount-store.js  error-logger.js  graphql-client.js  index.js  package.json  rbac.js  security.js  session-store.js  shopify-utils.js  tag-validation.js
(+27 files in other folders)
