[package]
name = "gcw_discount_function"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shopify_function = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3

[package.metadata]
# metadata for local reference
shopify_function = true
